manifests/vpn-torr/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-torr
