manifests/vpn-torr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-torrent
  namespace: vpn-torr
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vpn-torrent
  template:
    metadata:
      labels:
        app: vpn-torrent
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-node-2

      terminationGracePeriodSeconds: 30

      containers:
        - name: gluetun
          image: qmcgaw/gluetun@sha256:fa19cc76b2af13d57a8d3dc3066f2ada061b1c761b8aecf989b3877c0486e027  # v3.41.3
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - name: http-proxy
              containerPort: 8888
              protocol: TCP
            - name: shadowsocks-tcp
              containerPort: 8388
              protocol: TCP
            - name: shadowsocks-udp
              containerPort: 8388
              protocol: UDP
            - name: health
              containerPort: 9999
              protocol: TCP
          volumeMounts:
            - name: dev-tun
              mountPath: /dev/net/tun

        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr@sha256:2f3d31307beba3ba2dd226d191f5f5c14ee3b4d8b49277c64683f5ed97083179  # 2.5.2.5491-ls155
          imagePullPolicy: IfNotPresent
          ports:
            - name: prowlarr
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config

        - name: jdownloader2
          image: jlesage/jdownloader-2@sha256:47ee6c64917ca5326516ebe868714709c6bdd2e08ca0e33f6e80a943ef2019d2  # v26.07.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5800
          volumeMounts:
            - name: jdownloader-config
              mountPath: /config
            - name: media-nas
              mountPath: /output_2
              mountPropagation: HostToContainer
          readinessProbe:
            tcpSocket:
              port: 5800
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5800
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 6

      volumes:
        - name: dev-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: media-nas
          hostPath:
            path: /mnt/nas/media
            type: Directory
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: jdownloader-config
          persistentVolumeClaim:
            claimName: jdownloader-config

      dnsConfig:
        options:
          - name: ndots
            value: "1"
