manifests/vpn-torr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-torr-ingress
  namespace: vpn-torr
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - jdownloader2.techtronics.top
        - rdtclient.techtronics.top
        - prowlarr.techtronics.top
        - ariang.techtronics.top
        - aria2.techtronics.top
  rules:
    - host: jdownloader2.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jdownloader2
                port:
                  number: 5800
    - host: rdtclient.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rdtclient
                port:
                  number: 6500
    - host: prowlarr.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
    - host: ariang.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ariang
                port:
                  number: 6880
    - host: aria2.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aria2
                port:
                  number: 6800
